Fixed menu on mobile + android internet browseer fix

--- a/Less/main.less
+++ b/Less/main.less
@@ -216,7 +216,7 @@ textarea {
 body {
     font-size: 1em;
     line-height: 1.4;
-    padding: 5px 12px 0 12px;
+    padding: 0 12px 0 12px;
 }
 
 ::-moz-selection {
@@ -296,8 +296,15 @@ noscript {
 .header-container>header {
     display: block;
     position: relative;
+    >div {
+    	top: 0;
+        position: fixed;
+        z-index: 101;
+        background: #fff;
+        padding-top: 8px;
+    }
     h1 {
-        margin: 0;
+        margin: 0 24px 0 0;
         padding: 0 0 5px 0;
         text-align: center;
         font-size: 7.1em;
@@ -375,6 +382,9 @@ noscript {
     }
 }
 
+.main-container {
+    padding-top: 90px;
+}
 
 .section-content {
     margin-top: 1em!important;
@@ -650,20 +660,20 @@ noscript {
 
 /* cmp tile functions */
 
-.generate-tile-grid(@n, @i: 1) when (@i =< @n) {
+.generate-tile-grid(@n, @i: 0) when (@i =< @n) {
     @mg: 2%; 
     .cmp-tile-y@{i} {
-        margin-top: (@ht*@i);
-        padding-top: (@mg*@i);
+        padding-top: (@ht*@i)+(@mg*@i);
+        z-index: (100-@i);
+        top: 0;
     }
     .cmp-tile-height-@{i} {
-        margin-bottom: (@ht*@i);
-        padding-bottom: (@mg*@i);
+        padding-bottom: (@ht*@i)+(@mg*@i);
     } 
     .generate-tile-grid(@n, (@i + 1));
 } 
 
-.generate-tile-x(@n, @i: 1) when (@i =< @n) {
+.generate-tile-x(@n, @i: 0) when (@i =< @n) {
     @mg: 2%; 
     .cmp-tile-x@{i} {
         left: ((@wd+@mg)*@i);
@@ -681,7 +691,6 @@ noscript {
     width: 100%;
 
     ul {
-        position: relative;
         list-style: none;
         margin: 0;
         padding: 0;
@@ -699,9 +708,6 @@ noscript {
             position: relative;
             background: #fff;
         }
-
-
-
         .cmp-tile-caption {
             .sans1;
             font-size: 0.75em;
@@ -716,7 +722,6 @@ noscript {
      li {
         width: 100%;
         .box-sizing; 
-
     }
 }
 
@@ -728,6 +733,10 @@ noscript {
 } 
 
 .cmp-tile.cmp-tile-smallTiles {
+	ul {
+        position: absolute;
+	}
+
     /*padding-right: 6px;*/
     .box-sizing;
     @wd: 49%;
