--- a/Less/screen-desktop.less
+++ b/Less/screen-desktop.less
@@ -61,6 +61,7 @@
 .generate-tile-grid(@n, @i: 1) when (@i =< @n) {
 
     .cmp-tile-y@{i} {
+        z-index: (100-@i);
         margin-top: (@ht*@i);
         padding-top: (@mg*@i);
     }
